--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "devDependencies": {
     "enzyme": "^2.7.1",
     "react-addons-test-utils": "^15.4.2",
-    "react-scripts": "0.8.5"
+    "react-scripts": "0.8.5",
+    "react-test-renderer": "^15.4.2"
   },
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
-    "react-test-renderer": "^15.4.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
