--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-test-renderer": "^15.4.2"
   },
   "dependencies": {
+    "normalizr": "^3.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
