--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "enzyme": "^2.7.1",
+    "enzyme-to-json": "^1.4.5",
     "react-addons-test-utils": "^15.4.2",
     "react-scripts": "0.9.0",
     "react-test-renderer": "^15.4.2"
@@ -12,6 +13,7 @@
     "normalizr": "^3.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-mdl": "^1.9.0",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
