--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "brojects",
   "version": "0.1.0",
   "private": true,
+  "author": "Christoph Weber <kriswep@wetainment.com> (https://wetainment.com/)",
+  "license": "MIT",
   "devDependencies": {
     "enzyme": "^2.7.1",
     "enzyme-to-json": "^1.5.0",
