--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "enzyme": "^2.7.1",
     "enzyme-to-json": "^1.5.0",
     "react-addons-test-utils": "^15.4.2",
-    "react-scripts": "0.9.0",
+    "react-scripts": "^0.9.4",
     "react-test-renderer": "^15.4.2"
   },
   "dependencies": {
-    "normalizr": "^3.2.1",
+    "normalizr": "^3.2.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-mdl": "^1.9.0",
-    "react-redux": "^5.0.2",
+    "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
