--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ node_js:
 
 cache: yarn
 
-script: npm run test
-#after_success: 'npm run coveralls'
+script: npm test -- --coverage
+after_success: 'npm run coveralls'
 
 notifications:
   email: false
